@@ -1,2 +1,2 @@
 int file_server_new(queue_t *queue);
-int file_server_monitor_file(const char *file);
+int file_server_monitor_file(const char *file, int fd);
